--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Шапка сайта-->
     <header class="page-header">
 
-        <div class=" page-header__container">
+        <div class=" page-header__container container">
             <nav class="page-header__nav">
                 <a href="./index.html" class="logo page-header__logo">
                 Web<span class="logo__end">Studio</span>
@@ -153,7 +153,7 @@
                     <li class="activities__item ">
                         <img srcset="
                         ./images/tablet.jpg 1x, 
-                        ./images/tablet@2x.jpg 2x" src=" ./images/tablet.jpg " alt="десктопные приложения " width="370 ">
+                        ./images/tablet@2x.jpg 2x" src=" ./images/tablet.jpg " alt="десктопные приложения " width="370">
                         <div class="activities__box ">
                             <p class="activities__text ">Десктопные приложения </p>
                         </div>
@@ -162,7 +162,7 @@
                     <li class="activities__item ">
                         <img srcset="
                         ./images/phone.jpg 1x, 
-                        ./images/phone@2x.jpg 2x" src="./images/phone.jpg " alt="мобильные приложения " width="370 ">
+                        ./images/phone@2x.jpg 2x" src="./images/phone.jpg " alt="мобильные приложения " width="370">
                         <div class="activities__box ">
                             <p class="activities__text ">Мобильные приложения</p>
                         </div>
@@ -171,7 +171,7 @@
                     <li class="activities__item ">
                         <img srcset="
                         ./images/design.jpg 1x, 
-                        ./images/design@2x.jpg 2x" src="./images/design.jpg " alt="дизайн решения " width="370 ">
+                        ./images/design@2x.jpg 2x" src="./images/design.jpg " alt="дизайн решения " width="370">
                         <div class="activities__box ">
                             <p class="activities__text ">Дизайнерские решения</p>
                         </div>
@@ -448,7 +448,7 @@
     </main>
     <!-- Футер -->
     <footer class="footer ">
-        <div class=" footer__container ">
+        <div class=" footer__container container ">
             <div class="footer__contacts ">
                 <a href="./index.html " class="logo footer__logo ">
                 Web<span class="logo__end logo__end--inverse ">Studio</span>
@@ -505,11 +505,11 @@
             </div>
             <div class="subscription ">
                 <h2 class="subscription__title ">Подпишитесь на рассылку</h2>
-                <form class="footer-form " autocomplete="off ">
-                    <label class="footer-form__label " for="email ">
-                        <input class="footer-form__input " type="email " name="email " placeholder="E-mail ">
+                <form class="footer-form" autocomplete="off">
+                    <label class="footer-form__label">
+                        <input class="footer-form__input" type="email" name="email"  placeholder="E-mail">
                     </label>
-                    <button class="footer-form__btn " type="submit ">
+                    <button class="footer-form__btn" type="submit">
                         <span >Подписаться</span>
                         <svg class="footer-form__icon " width='24' height='24'>
                                             <use href='./images/icons.svg#iconsend'></use>
@@ -533,12 +533,12 @@
             </svg>    
             </button>
             <p class="modal__header ">Оставьте свои данные, мы вам перезвоним</p>
-            <form class="modal-form " autocomplete="off ">
+            <form class="modal-form" autocomplete="off">
                 <label class="modal-form__label ">
                     Имя
                     <span class="modal-form__box ">
-                    <input type="text " name="user name " class="modal-form__input " >
-                <svg class="modal-form__icon " width='18' height='18'>
+                    <input type="text" name="user name" class="modal-form__input" >
+                <svg class="modal-form__icon" width='18' height='18'>
                     <use href='./images/icons.svg#person'></use>
                 </svg>
                 </span>
@@ -546,7 +546,7 @@
                 <label class="modal-form__label ">
                     Телефон
                     <span class="modal-form__box ">
-                        <input type="tel " name="phone " class="modal-form__input ">
+                        <input type="tel" name="phone" class="modal-form__input">
                 <svg class="modal-form__icon " width='18' height='18'>
                     <use href='./images/icons.svg#phoneblack'></use>
                 </svg>
@@ -555,24 +555,24 @@
                 <label class="modal-form__label ">
                     Почта
                 <span class="modal-form__box ">
-                    <input type="email " name="mail " class="modal-form__input ">
+                    <input type="email" name="mail" class="modal-form__input">
                 <svg class="modal-form__icon " width='18' height='18'>
                     <use href='./images/icons.svg#email'></use>
                 </svg>
                  </span>
             </label>
-                <label class="modal-form__label ">
+                <label class="modal-form__label">
                    Комментарий
-                    <textarea type="feedback " class="modal-form__feedback " placeholder="Введите текст " ></textarea>
+                    <textarea name="feedback" class="modal-form__feedback" placeholder="Введите текст" ></textarea>
                  </label>
 
-                <label class="policy-box ">
-                     <input class="policy-box__checkbox " type="checkbox " >
-                     <span class="policy-box__icon "></span>
-                     <span class="policy-box__text ">Соглашаюсь с рассылкой и принимаю&nbsp</span>
-                     <a href=" "  class="policy-box__link ">Условия договора</a>
+                <label class="policy-box">
+                     <input class="policy-box__checkbox" type="checkbox" >
+                     <span class="policy-box__icon"></span>
+                     <span class="policy-box__text">Соглашаюсь с рассылкой и принимаю &nbsp;</span>
+                     <a href=" "  class="policy-box__link">Условия договора</a>
                  </label>
-                <button class="modal-form__btn " type="submit ">Отправить</button>
+                <button class="modal-form__btn" type="submit">Отправить</button>
             </form>
 
         </div>
