--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <!--Шапка сайта-->
     <header class="page-header">
 
-        <div class=" page-header__container">
+        <div class=" page-header__container container">
             <nav class="page-header__nav">
                 <a href="./index.html" class="logo page-header__logo">
                 Web<span class="logo__end">Studio</span>
@@ -308,7 +308,7 @@
     </main>
     <!-- Футер -->
     <footer class="footer">
-        <div class="footer__container">
+        <div class="footer__container container">
             <div class="footer__contacts ">
                 <a href="./index.html" class="logo footer__logo">
                 Web<span class="logo__end logo__end--inverse ">Studio</span>
@@ -366,7 +366,7 @@
             <div class="subscription">
                 <h2 class="subscription__title ">Подпишитесь на рассылку</h2>
                 <form class="footer-form" autocomplete="off">
-                    <label class="footer-form__label" for="email">
+                    <label class="footer-form__label">
                         <input class="footer-form__input" type="email" name="email" placeholder="E-mail">
                     </label>
                     <button class="footer-form__btn" type="submit">
